--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,6 @@
 PORT=3000
 MONGOURI=mongodb://localhost:27017/aiai
 SECRETE=manasecrete
+REDIS_HOST=redis-12786.crce182.ap-south-1-1.ec2.redns.redis-cloud.com
+REDIS_PORT=12786
+REDIS_PASSWORD=WoN0sNK8CHsxGDZWX37VVa6e7fPedLSm
