--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,7 +10,8 @@
     "ioredis": "^5.5.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "socket.io": "^4.8.1"
   },
   "name": "backend",
   "version": "1.0.0",
