chat feature finished

--- a/Backend/.env
+++ b/Backend/.env
@@ -4,3 +4,4 @@ SECRETE=manasecrete
 REDIS_HOST=redis-12786.crce182.ap-south-1-1.ec2.redns.redis-cloud.com
 REDIS_PORT=12786
 REDIS_PASSWORD=WoN0sNK8CHsxGDZWX37VVa6e7fPedLSm
+GOOGLE_AI_KEY=AIzaSyCB5vh4xDEtkgRg3jqIgGhvKGRB1T2uYVk
